--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Men's Mental Health Awareness</title>
+</head>
+<body>
 
+  <h1>Men's Mental Health Awareness</h1>
+
+  <p><strong>Men's mental health is a critical but often overlooked issue.</strong> Many men feel pressured to stay silent about their emotions, leading to untreated conditions and serious consequences. <em>Raising awareness</em> and encouraging support can help break the stigma and promote well-being.</p>
+
+  <h2>Common Mental Health Issues Among Men</h2>
+  <ul>
+    <li>Depression</li>
+    <li>Anxiety</li>
+    <li>Substance Abuse</li>
+    <li>Post-Traumatic Stress Disorder (PTSD)</li>
+    <li>Anger Management</li>
+  </ul>
+
+  <h2>Steps to Support Mental Health</h2>
+  <ol>
+    <li>Start open conversations without judgment</li>
+    <li>Encourage seeking professional help</li>
+    <li>Promote healthy lifestyle choices</li>
+    <li>Challenge harmful stereotypes</li>
+    <li>Support mental health initiatives</li>
+  </ol>
+
+  <h2>Key Statistics</h2>
+  <table border="1">
+    <tr>
+      <th>Issue</th>
+      <th>Fact</th>
+    </tr>
+    <tr>
+      <td><strong>Depression</strong></td>
+      <td>Over 6 million men suffer from depression in the U.S. each year.</td>
+    </tr>
+    <tr>
+      <td><strong>Suicide</strong></td>
+      <td>Men die by suicide nearly 4 times more often than women.</td>
+    </tr>
+    <tr>
+      <td><strong>Help Seeking</strong></td>
+      <td>Only about 25% of men with mental health problems seek help.</td>
+    </tr>
+  </table>
+
+</body>
+</html>
