--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <h1>Men's Mental Health Awareness</h1>
 
-  <p><strong>Men's mental health is a critical but often overlooked issue.</strong> Many men feel pressured to stay silent about their emotions, leading to untreated conditions and serious consequences. <em>Raising awareness</em> and encouraging support can help break the stigma and promote well-being.</p>
+  <p><strong>Men's mental health is a critical but often overlooked issue.</strong> Many men feel pressured to stay silent about their emotions, leading to untreated conditions and serious consequences. <em>Raising awareness</em> and encouraging support can help break the stigma and promote well-being.By creating safe spaces for open dialogue, we can empower men to not be afaird of their struggles without fear of judgment. Also giving this space for men to use as a place to help them out and find ways to seek help.</p>
 
   <h2>Common Mental Health Issues Among Men</h2>
   <ul>
